--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,9 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: pink;
-}
-
 .container {
-    max-width: 62.5rem;
+    max-width: 75rem;
     height: 100vh;
-    background-color: green;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -19,19 +14,19 @@ body {
 }
 
 .carousel {
-    width: 50rem;
-    height: 300px;
+    width: 62.5rem;
+    height: 500px;
     margin: 0 auto;
-    background-color: red;
     position: relative;
 }
 
 .arrow {
     position: absolute;
     z-index: 10;
-    color: beige;
+    color: green;
     left: 50%;
     transform: translate(-50%, 0);
+    cursor: pointer;
 }
 
 .arrow-up {
@@ -44,6 +39,7 @@ body {
 
 .item {
     height: 100%;
+    display: none;
 }
 
 .item img {
@@ -51,4 +47,8 @@ body {
     width: 100%;
     height: 100%;
     object-position: 0 30%;
+}
+
+.show {
+    display: block;
 }
