--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .carousel {
@@ -20,6 +21,12 @@
     position: relative;
 }
 
+.thumbnail {
+    background-color: black;
+    height: 500px;
+    width: 20%;
+}
+
 .arrow {
     position: absolute;
     z-index: 10;
@@ -27,6 +34,11 @@
     left: 50%;
     transform: translate(-50%, 0);
     cursor: pointer;
+    background-color: white;
+    padding: 5px;
+    border-radius: 50%;
+    line-height: 10px;
+    opacity: 0.5;
 }
 
 .arrow-up {
@@ -42,13 +54,33 @@
     display: none;
 }
 
+.thumbnail .item {
+    display: block;
+    width: 100%;
+    height: 20%;
+    opacity: 0.3;
+}
+
 .item img {
     object-fit: cover;
     width: 100%;
     height: 100%;
     object-position: 0 30%;
+    display: block;
+}
+
+.thumbnail img {
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .show {
     display: block;
+}
+
+.thumbnail .clear {
+    opacity: 1;
+    border: 1px solid yellow;
 }
