--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+/* reset */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/* common */
 
 .container {
     max-width: 75rem;
@@ -41,6 +45,12 @@
     opacity: 0.5;
 }
 
+.show {
+    display: block;
+}
+
+/* carosello */
+
 .arrow-up {
     top: 10px;
 }
@@ -54,13 +64,6 @@
     display: none;
 }
 
-.thumbnail .item {
-    display: block;
-    width: 100%;
-    height: 20%;
-    opacity: 0.3;
-}
-
 .item img {
     object-fit: cover;
     width: 100%;
@@ -69,15 +72,20 @@
     display: block;
 }
 
+/* thumbnail */
+
+.thumbnail .item {
+    display: block;
+    width: 100%;
+    height: 20%;
+    opacity: 0.3;
+}
+
 .thumbnail img {
     object-fit: cover;
     display: block;
     width: 100%;
     height: 100%;
-}
-
-.show {
-    display: block;
 }
 
 .thumbnail .clear {
